--- a/Mercury/src/main/webapp/css/styleHome.css
+++ b/Mercury/src/main/webapp/css/styleHome.css
@@ -106,6 +106,8 @@ body {
   padding: 20px;
   border-style: double;
   position: relative;
+  border-right-style: solid;
+  border-color: #000000;
 }
 
 .event a{
@@ -121,12 +123,11 @@ body {
   filter: alpha(opacity=1); /* Fix to make div clickable in IE */
 }
 
-/* Footer */
 .footer {
   width:100%;
   padding: 15px;
   text-align: center;
-  background: #8bf3c1;
+  background: #1abc9c;
   color: white;
   border-style: solid;
   border-color: #000000;
