--- a/Mercury/src/main/webapp/css/styleHome.css
+++ b/Mercury/src/main/webapp/css/styleHome.css
@@ -106,8 +106,6 @@ body {
   padding: 20px;
   border-style: double;
   position: relative;
-  border-right-style: solid;
-  border-color: #000000;
 }
 
 .event a{
@@ -123,11 +121,12 @@ body {
   filter: alpha(opacity=1); /* Fix to make div clickable in IE */
 }
 
+/* Footer */
 .footer {
   width:100%;
   padding: 15px;
   text-align: center;
-  background: #1abc9c;
+  background: #8bf3c1;
   color: white;
   border-style: solid;
   border-color: #000000;
