--- a/Mercury/src/main/webapp/css/admin.css
+++ b/Mercury/src/main/webapp/css/admin.css
@@ -18,18 +18,37 @@
 
 #listaEnti{
  	position: absolute;
+ 	overflow-y:auto;
     top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     margin: auto;
     width:auto;
-    height: 100%;
+    height: 45%;
+    text-align: center;
+}
+
+#listaEntiBannati{
+ 	position: absolute;
+ 	overflow-y:auto;
+ 	top:40%;
+    margin: auto;
+    width:auto;
+    height: 45%;
     text-align: center;
 }
 
  .boxLista{
    background:white;
+   top:0;
+   width:auto;
+   border-radius:6px;
+   margin: auto;
+   padding:0px 0px 30% 0px;
+   border: #2980b9 4px solid; 
+ }
+ 
+  .boxLista1{
+   background:white;
+   top:30%;
    width:auto;
    border-radius:6px;
    margin: auto;
