--- a/Mercury/src/main/webapp/css/style.css
+++ b/Mercury/src/main/webapp/css/style.css
@@ -50,7 +50,7 @@
    margin-top:20px;
    margin-bottom:20px;
    float:left;
-   margin-left:88px;
+   margin-left:37%;
    font-weight:800;
    font-size:0.8em;
  }
